--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: black;
+  background-color: #121113;
   color: white;
   font-family: "Inter", sans-serif;
 }
@@ -13,18 +13,25 @@
   box-sizing: border-box;
   position: fixed;
   height: 80px;
-  width: 80%;
-  border-radius: 24px;
+  min-width: 70vw;
+  max-width: 1000px;
+  border-radius: 22px;
   margin-top: 16px;
-  backdrop-filter: blur();
-  background-color: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background-color: hsl(0, 0%, 9%, 95%);
+  border: 2px #242628 solid;
+  z-index: 999;
+  div {
+    display: flex;
+  }
 }
 
 .main {
   padding-left: 10vw;
   padding-right: 10vw;
   width: 100%;
-  min-height: 100vh;
+  min-height: 200vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -32,26 +39,47 @@
 
 .hero {
   width: 100%;
-  font-size: 18vh;
+  font-size: 12vw;
   margin-top: 150px;
   margin-bottom: 40px;
-  margin-left: 40px;
+  margin-left: 10vw;
 }
 
 .grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  width: 100%;
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 160px;
+  gap: 16px;
   justify-content: center;
+  width: 70vw;
   .item {
-    width: 200px;
-    height: 200px;
-    backdrop-filter: blur();
-    background-color: white;
-    border-radius: 24px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border: 2px #242628 solid;
+    background-color: #171717;
+    border-radius: 22px;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 998;
+    height: 100%;
+  }
+  .item-1 {
+    grid-column: span 5;
+    grid-row: span 2;
+    padding: 10px;
+    padding-top: 50px;
+    height: 100%;
+    width: 100%;
+  }
+  .item-2 {
+    grid-column: 6/6;
+    height: 100%;
+    width: 100%;
+  }
+  .item-3 {
+    height: 100%;
+    width: 100%;
   }
 }
