--- a/src/App.scss
+++ b/src/App.scss
@@ -48,11 +48,11 @@
 .grid {
   display: grid;
   margin: 0 auto;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 160px;
   gap: 16px;
   justify-content: center;
-  width: 70vw;
+  width: 700px;
   .item {
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -66,7 +66,7 @@
     height: 100%;
   }
   .item-1 {
-    grid-column: span 5;
+    grid-column: span 4;
     grid-row: span 2;
     padding: 10px;
     padding-top: 50px;
@@ -74,7 +74,7 @@
     width: 100%;
   }
   .item-2 {
-    grid-column: 6/6;
+    grid-column: span 1;
     height: 100%;
     width: 100%;
   }
