--- a/src/App.scss
+++ b/src/App.scss
@@ -5,9 +5,9 @@
   padding: 0;
   box-sizing: border-box;
   color: #eeeeee;
-  font-family: "Inter", sans-serif;
   font-weight: 500;
-  -webkit-font-smoothing: auto;
+  -webkit-font-smoothing: antialiased;
+  font-style: italic;
   img {
     height: 100%;
     width: 100%;
@@ -30,7 +30,7 @@
   box-sizing: border-box;
   position: fixed;
   height: 80px;
-  width: 80vw;
+  width: 85vw;
   border-radius: 22px;
   margin-top: 16px;
   -webkit-backdrop-filter: blur(10px);
@@ -44,6 +44,7 @@
     text-decoration: none;
     div {
       font-size: 32px;
+
     }
   }
 }
@@ -52,7 +53,7 @@
   padding-left: 10vw;
   padding-right: 10vw;
   width: 100%;
-  min-height: 130vh;
+  padding-bottom: 10vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -66,40 +67,30 @@
   justify-content: center;
   padding-top: 10vh;
   height: 45vh;
-  font-family: "DiodeLight";
-  font-weight: 400;
+  font-family: "DiodeLight", serif;
+  font-style: italic;
 }
 
 .grid {
   display: grid;
   margin: 0 auto;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 200px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr;
+  grid-auto-rows: 1fr;
+  grid-auto-columns: 1fr;
   gap: 16px;
   justify-content: center;
   max-width: 1200px;
-  .item-large {
-    grid-column: span 4;
-    grid-row: span 3;
+  .item {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    border-radius: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 998;
+    height: 100%;
   }
-  .item-small {
-    aspect-ratio: 1;
-  }
-  .item-bar {
-    grid-column: span 2;
-    grid-row: span 1;
-  }
-}
-
-.item {
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  border-radius: 22px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 998;
-  height: 100%;
 }
 
 .contact {
@@ -126,11 +117,13 @@
 }
 
 .big {
-  padding: 10px;
-  padding-top: 0;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: left;
+  padding: 10px;
+  padding-top: 0;
   .info {
     display: flex;
     justify-content: space-between;
@@ -140,6 +133,7 @@
       margin: 24px;
       background: transparent;
       color: inherit;
+
     }
   }
   .preview {
@@ -162,11 +156,21 @@
 }
 
 @font-face {
-  font-family: "Diode";
-  src: url("/type/Diode.otf") format("opentype");
+  font-family: "DiodeLight";
+  src: url("/type/DiodeLight.otf") format("opentype");
 }
 
 @font-face {
-  font-family: "DiodeLight";
-  src: url("/type/DiodeLight.otf") format("opentype");
+  font-family: "Ogg";
+  src: url("/type/Ogg.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Ogg-Light";
+  src: url("/type/Ogg-Light.otf") format("opentype");
+}
+
+@font-face {
+  font-family: "Ogg-Regular";
+  src: url("/type/Ogg-Regular.otf") format("opentype");
 }
