--- a/src/App.scss
+++ b/src/App.scss
@@ -7,12 +7,13 @@
   color: #eeeeee;
   font-weight: 500;
   -webkit-font-smoothing: antialiased;
-
   font-family: "Meqanor";
+  font-style: italic;
   img {
     height: 100%;
     width: 100%;
     border-radius: 16px;
+    object-fit: cover;
   }
   a {
     text-decoration: none;
@@ -45,7 +46,6 @@
     text-decoration: none;
     div {
       font-size: 32px;
-
     }
   }
 }
@@ -70,6 +70,9 @@
   height: 45vh;
   font-family: "DiodeLight", serif;
   font-style: italic;
+  span {
+    font-family: inherit;
+  }
 }
 
 .grid {
@@ -79,6 +82,7 @@
   grid-template-rows: 1fr;
   grid-auto-rows: 1fr;
   grid-auto-columns: 1fr;
+  grid-auto-flow: row dense;
   gap: 16px;
   justify-content: center;
   max-width: 1200px;
@@ -91,6 +95,13 @@
     justify-content: center;
     z-index: 998;
     height: 100%;
+    .inside {
+      height: 100%;
+      width: 100%;
+      border-radius: 16px;
+      position: relative;
+      overflow: hidden;
+    }
   }
 }
 
@@ -123,7 +134,6 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-  padding: 10px;
   padding-top: 0;
   .info {
     display: flex;
@@ -134,7 +144,6 @@
       margin: 24px;
       background: transparent;
       color: inherit;
-
     }
   }
   .preview {
@@ -178,5 +187,5 @@
 
 @font-face {
   font-family: "Meqanor";
-  src: url("/type/Meqanor.otf") format("opentype")
+  src: url("/type/Meqanor.otf") format("opentype");
 }
